chandeliers-lus/tests/fail/ui/causality/redef-var-ov.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/fail/ui/causality/redef-var-ov.rs:3:9
  |
3 |     var a : int;
  |         ^
  |
note: Already defined here
 --> tests/fail/ui/causality/redef-var-ov.rs:2:25
  |
2 |     node foo() returns (a : bool);
  |                         ^
